# vibe-course-platform

./: .gitignore  Caddyfile.example  DEPLOY.md  HANDOFF.md  README.md  STUDENT_GUIDE.md  TEACHER_GUIDE.md  docker-compose.yml
client/: RELEASE.md  pyproject.toml
client/marketplace/: README.md
client/scripts/: bootstrap.ps1  bootstrap.sh
client/tests/: conftest.py  test_api.py  test_bootstrap.py  test_cli.py  test_collect.py  test_config.py  test_e2e.py  test_marketplace.py  test_mcp_tools.py  test_outbox.py  test_package.py  test_password_bootstrap.py  test_sessions.py
client/vibe_submit/: __init__.py  api.py  bootstrap.py  cli.py  collect.py  config.py  errors.py  mcp_server.py  outbox.py  package.py  preview.py  sessions.py
server/: .dockerignore  .env.example  Dockerfile  pyproject.toml
server/.pytest-temp/test_bearer_auth0/: test.db
server/app/: cli.py  config.py  db.py  deps.py  errors.py  main.py  models.py  security.py  utils.py
server/tests/: conftest.py  test_artifacts.py  test_assignment_attachments.py  test_assignments.py  test_auth.py  test_cli.py  test_courses_roster.py  test_dashboard_actions.py  test_eval_e2e.py  test_eval_parser.py  test_eval_pipeline.py  test_eval_prompt_priority.py  test_eval_worker.py  test_health.py  test_models.py  test_production_config.py  test_requeue_on_prompt_change.py  test_self_registration_groups.py  test_status.py  test_student_auth.py  test_student_reports.py  test_student_web_portal.py  test_submissions_upload.py  test_web_board.py  test_web_detail.py  test_web_management.py  test_web_present.py  test_zipcheck.py
spikes/hello-pkg/: pyproject.toml
(+119 files in other folders)
