[project]
name = "vibe-submit"
version = "0.1.0"
description = "Vibe Coding homework submission client"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
vibe-submit = "vibe_submit.cli:main"
vibe-submit-mcp = "vibe_submit.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibe_submit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
