[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "itsdangerous>=2.1",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
vibe-server = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

