[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-submit"
version = "0.2.0"
description = "spike test package"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
vibe-submit = "vibe_submit.cli:main"
vibe-submit-mcp = "vibe_submit.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_submit"]
